--- a/service/package.json
+++ b/service/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.3",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
